@@ -1,3 +1,9 @@
+Thu Oct 29 23:21:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/DisjointSequence.cpp:
+
+          Minor formatting updates.
+
 Thu Oct 29 22:13:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/Definitions.h:
